Add --delete option to clean Deleted files that are not in frontend
Also ignore livetv, add recording groups and update documentation.

--- a/README.pod
+++ b/README.pod
@@ -5,12 +5,13 @@ mythtv-balance-expire - move recording files to balance multiple disks
 =head1 SYNOPSIS
 
  mythtv-balance-expire [--help | --man | options]
-    --help	show full usage of options and exit
+    --help	show these options and exit
     --man	show the full manual page and exit
     --files	balance by file count rather than by file size
     --delta=N	expiring file delta allowed between disks [10]
     --titles	append titles to all files, not just moving files
     --subtitles	append subtitles to titles
+    --delete	delete older recordings from Deleted group
     --verbose	show the commands that would be run, or are being run:
     --go	actually do the moves, else just show what would be done
 
@@ -49,7 +50,7 @@ The output shows expiring recordings in time sorted order.  Sums are
 indented per disk, so each sum "column" is a different disk.  The
 lines look like:
 
-	SUM DELTA GB CHAN_YYYYMMDDHHMMSS.mpg /path/to/recording
+    SUM DELTA GB CHAN_YYYYMMDDHHMMSS.ts /path/to/recording GROUP
 
 =over 4
 
@@ -68,30 +69,34 @@ is triggered.
 
 Size in gigabytes of this expiring file.
 
-=item B<CHAN_YYYYMMDDHHMMSS.mpg>
+=item B<CHAN_YYYYMMDDHHMMSS.ts>
 
 Recording file name: channel, time stamp and file extension.  The
 lines are sorted by the YYYYMMDDHHMMSS time stamp of the recording.
 
 =item B</path/to/recording>
 
-Current path to the recording file.  The B<--title> of the file is
-optionally shown.
+Current path to the recording file.
+
+=item B<GROUP>  [title]
+
+Recording group of the file and optionally its B<--title> and
+B<--subtitle>
 
 =back
 
 Suggested moves are shown when a file should move to produce a better
 balance.  These lines look like this:
 
-	< GB expirefile /too/many/path -> /too/few/path XXX free < title
-	> GB keeperfile /too/few/path -> /too/many/path YYY free > title
+    < GB expirefile /too/many/path -> /too/few/path XXX free < title
+    > GB keeperfile /too/few/path -> /too/many/path YYY free > title
 
 The expiring file is delimited by < and shown with its size in
 gigabytes.  It should move from the left path with too many to the
 right path with too few as shown by the arrow.  The resulting file
 count and free space of the destination location is shown.  Finally
-the title (and optionally B<--subtitle>) of the moving file is
-displayed.
+the recording group, title (and optionally B<--subtitle>) of the
+moving file is displayed.
 
 If the destination is now more full than the source, a trade is made.
 A file with auto-expire disabled (a permanent "keeper" file) is
@@ -108,8 +113,8 @@ If the suggested moves look correct, you can add B<--verbose> to see
 the commands that will be run.  For the successful copies, the
 original location will be removed.  If this still looks good, simply
 add B<--go> to actually do the given file moves.  When using B<--go>
-you must be root or the owner of the recording directories (mythtv) so
-that you have permission to move the files.
+you must be root or the owner of the recording directories (perhaps
+mythtv) so that you have permission to move the files.
 
 =head1 OPTIONS
 
@@ -139,6 +144,16 @@ shown only for files that are moving.
 =item B<--subtitles>
 
 Append subtitles to all titles.
+
+=item B<--delete>
+
+Old recordings found in the Deleted recording group are displayed with
+a note that B<--delete> may be used to delete them.  This could be
+needed for example when these recordings are no longer offered in the
+frontend due to a deletepending flag in the database.  See:
+https://forum.mythtv.org/viewtopic.php?f=36&t=2888&p=14057 Once used,
+the MythTV backend will do the file removes over some time.  This
+option has no effect if no old Deleted files are found.
 
 =item B<--verbose>
 
@@ -175,8 +190,8 @@ happen between B<--go> runs.
 If your disks are different sizes, it may not be possible to balance
 recent time.  This is normal - you will balance that time later when
 you run this again in the future.  In fact, it is a good idea to run
-this periodically; I do so once a month.  If you really trust the
-actions, you might crontab(1) this with redirection to a log file.
+this periodically; I do so once a month.  Once you trust the actions,
+you may crontab(1) this job with B<--go>.
 
 =head1 AUTHOR
 
@@ -184,7 +199,7 @@ Timothy D Witham <twitham@sbcglobal.net>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2017-2019 Timothy D Witham.
+Copyright 2017-2024 Timothy D Witham.
 
 This program is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
